syntax = "proto3";

package github.com.codeedu.codepix;

option go_package = "protofiles/pb";

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse) {};
  rpc FindProducts(FindProductsRequest) returns (FindProductsResponse) {};
}


message CreateProductRequest {
  string name = 1;
  string description = 2;
  float price = 3;
}

message Product {
  int32 id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}

message CreateProductResponse {
  Product product = 1;
}

message FindProductsRequest{

}

message FindProductsResponse{
  repeated Product products = 1;
}